--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bjsunhe/summary#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "openai": "^3.2.1",
     "readline-sync": "^1.4.10"
   }
